--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,15 @@
 {
-  "builds": [],
-  "outputDirectory": "dist"
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "routes": [
+    {
+      "src": "/",
+      "dest": "/complete-demo.html"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/$1"
+    }
+  ],
+  "functions": {}
 }
